--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -17,14 +17,14 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       android:versionCode="1"
       android:versionName="1.0" package="com.example.android.accelerometerplay">
-      <uses-sdk android:minSdkVersion="10" android:targetSdkVersion="12" />
+      <uses-sdk android:minSdkVersion="11" android:targetSdkVersion="12" />
       <uses-permission android:name="android.permission.VIBRATE"></uses-permission>
 
 	<uses-permission android:name="android.permission.WAKE_LOCK"></uses-permission>
     <application android:icon="@drawable/icon" android:label="@string/app_name" android:allowBackup="false">
         <activity android:name=".AccelerometerPlayActivity"
                   android:label="@string/app_name"
-                  android:screenOrientation="portrait" android:theme="@android:style/Theme.NoTitleBar.Fullscreen">
+                  android:screenOrientation="portrait" android:theme="@android:style/Theme.Holo">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
