--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -16,15 +16,15 @@
 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       android:versionCode="1"
-      android:versionName="1.0" package="com.example.android.accelerometerplay">
-      <uses-sdk android:minSdkVersion="11" android:targetSdkVersion="12" />
+      android:versionName="1.0" package="com.example.android.accelerometerplay" android:installLocation="auto">
+      <uses-sdk android:minSdkVersion="10" android:targetSdkVersion="12" android:maxSdkVersion="18" />
       <uses-permission android:name="android.permission.VIBRATE"></uses-permission>
 
 	<uses-permission android:name="android.permission.WAKE_LOCK"></uses-permission>
-    <application android:icon="@drawable/icon" android:label="@string/app_name" android:allowBackup="false">
+    <application android:icon="@drawable/icon" android:label="@string/app_name" android:allowBackup="false" android:killAfterRestore="false">
         <activity android:name=".AccelerometerPlayActivity"
                   android:label="@string/app_name"
-                  android:screenOrientation="portrait" android:theme="@android:style/Theme.Holo">
+                  android:screenOrientation="portrait" android:theme="@android:style/Theme.NoTitleBar.Fullscreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
