--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -22,7 +22,7 @@
 
 	<uses-permission android:name="android.permission.WAKE_LOCK"></uses-permission>
     <application android:icon="@drawable/icon" android:label="@string/app_name" android:allowBackup="false" android:killAfterRestore="false">
-        <activity android:name=".AccelerometerPlayActivity"
+        <activity android:name="AccelerometerPlayActivity"
                   android:label="@string/app_name"
                   android:screenOrientation="portrait" android:theme="@android:style/Theme.NoTitleBar.Fullscreen">
             <intent-filter>
@@ -30,6 +30,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <service android:name="TimingService"></service>
 
     </application>
 
